<resources>
    <string name="app_name">Movie Apps</string>
    <string name="lanjutkan">Lanjutkan</string>
    <string name="lewati_perkenalan">Lewati Perkenalan</string>
    <string name="now_playing">Now Playing</string>
    <string name="now_playing_desc">Lebih mudah untuk mengetahui film yang sedang tampil</string>
    <string name="pre_sale">Pre Sale</string>
    <string name="pre_sale_desc">Tidak khawatir ketinggalan update film terbaru</string>
    <string name="cashless">Cashless</string>
    <string name="cashless_desc">Gunakan e-wallet untuk transaksi tiket nonton</string>
    <string name="my_image">My Image</string>
</resources>