<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBlue"
        tools:context=".Activity.onboarding.OnBoardingOneActivity">

        <ImageView
            android:id="@+id/iv_onboardingone"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="32dp"
            android:src="@drawable/onboardingone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:id="@+id/tv_now_playing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_onboardingone"
            android:textColor="@color/white"
            android:textSize="24dp"
            android:textStyle="bold"
            android:layout_marginTop="40dp"
            android:text="@string/now_playing"/>
        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_now_playing"
            android:textColor="@color/white"
            android:textSize="14dp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_marginTop="8dp"
            android:text="@string/now_playing_desc"
            android:gravity="center" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_rectangle_pink"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="24dp"
            android:text="@string/lanjutkan"
            android:textColor="@color/white"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_skip"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_skip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_rectangle_blue_grey"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/lewati_perkenalan"
            android:textColor="@color/white"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
